<resources>
    <string name="app_name">PocketTurchin</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_favs">Favs</string>
    <string name="title_about">About</string>
    <string name="about_text">
        <b>Mission statement</b>
        \n\nThe Turchin Center for the Visual Arts at Appalachian State University engages visitors
        from the university, community, nation and beyond in creating unique experiences through dynamic
        and accessible exhibition, education, outreach and collection programs. These programs inspire
        and support a lifelong engagement with the visual arts and create opportunities for participants
        to learn more about themselves and the world around them.\n\n

        <b>Vision statement</b>
        \n\nThe Turchin Center for the Visual Arts will continue to be an engaging and accessible resource
        responding to diverse educational, cultural and health needs by meeting participants wherever they
        are in their personal relationship with the visual arts and providing them with opportunities to access
        the power of the arts to help learn, grow and heal.
    </string>
    <string name="copyright">
        Copyright 2017, Chris Lail\n
        Student, Appalachian State University\n
        CS 3240 Mobile Device Programming Project
    </string>
    <string name="title_name">Title</string>
    <string name="artist_name">Artist</string>
    <string name="gallery_name">Gallery</string>
    <string name="title_detail_gallery"><b>Title:</b> </string>
    <string name="artist_detail_gallery"><b>Artist:</b> </string>
    <string name="displayed_detail_gallery"><b>Displayed in:</b> </string>
    <string name="exhibition_dates_detail_gallery"><b>Exhibition dates:</b> </string>
    <string name="description"><b>Description:</b> </string>

    <string name="gallery_description_1">\n\nThe 320-mile New River begins high in the mountains of
        northwestern North Carolina, deep in the heart of the Southern Appalachians. The New, as it
        is affectionately called, actually begins as two rivers, the North Fork in Ashe County and
        South Fork in Watauga County. The two forks join in Alleghany County and flow north from
        North Carolina’s Blue Ridge into Virginia and West Virginia. One of the oldest rivers in the world
        and certainly the oldest in the United States, the headwaters of the New wind more than 100 miles through
        the Appalachians; the forks join just a few miles south of the North Carolina-Virginia line.
        The New River continues its somewhat unusual northward flow through southwestern Virginia and West Virginia
        into the Kanawha and Ohio rivers—its waters eventually reaching the Gulf of Mexico by way of the Mississippi River.

        \n\nPartnering with the Center for Appalachian Studies, Tom Hansell’s graduate seminar, Sustainability
        and the Arts in Appalachia (AS5065), and New River Conservancy (NRC) to showcase the headwaters of the
        New River in the northwestern corner of North Carolina, the Turchin Center for the Visual Arts supports
        both the mission of the NRC and Appalachian State University’s commitment to an engaged campus culture
        inspired by the ideal of sustainable communities. The New River Conservancy believes that clean water,
        healthy land and empowered people benefit the surrounding communities by creating a watershed where people
        want to live, work and play.\n</string>

    <string name="gallery_description_2">\n\nWayne Trapp was an enigmatic artist; some would say a Renaissance man
        – the consummate artist who does a bit of everything, always executing his chosen craft well. He had an
        insatiable curiosity, not only for art but also for, well; everything that life offered. With his pipe
        clenched between his teeth, he never stopped making marks—in his journals, on art paper, on canvas, in
        bronze, in stone and in steel. He collected cars, good wine, conversation, read Nietzche and was always
        up for the next adventure. He wrote: “My sense of design and my curiosity of how things are made is as
        innate to me as eating and breathing. The lines and elements of light fixtures, pepper mills, skyscrapers,
        bar stools, writing instruments—virtually all things human made—hold intrigue for me if their designs
        shout form and function.” Trapp made his first sculpture at the age of nine and didn’t stop making until
        his death last November. He had a rich life, he served in the Army, went to art school in Pittsburg,
        while driving a cab to make money, spent a short time as an art director, something, he claimed, turned
        him into a self-described “hippie,” and then farmer and finally a sculptor.

        \n\nThe exhibition at the Turchin Center features a variety of Trapp’s creative work: paintings, drawings in
        pencil and ink on paper and intimate sculptural forms in bronze and steel.\n</string>

    <string name="gallery_description_3">
        \n\nAs a society, we are driven by the notion of celebrity and pop culture. We marvel at its grandeur and excess
        yet we equally revel in its pitfalls and toxicity. I am most certainly no different.\n\n

        From my earliest years, I was mesmerized by my parents\' old magazine and album covers. At the time, the figures
        depicted in these photos were merely just that—figures. I couldn\'t tell you their names or why they seemed iconic,
        but these images had a great effect on me.\n\n

        My ICONIPOP series explores the realm of celebrity, popular culture, and society as a whole through some of the
        world\'s most recognizable images.\n\n

        Each painting has a drastically different and unique background which helps tell a story. Through the use of vivid
        color, bold text, and eye-catching patterns, each background enhances the figure at hand while simultaneously commenting
        on the individual—and society—from a rather cheeky perspective.\n\n

        Ultimately, it is up to the viewer to come up with his or her own interpretation of the pieces in this collection;
        none-the-less, I hope everyone walks away with one common belief—that my work is fun. My goal with this collection,
        and every collection for that matter, is to evoke a positive reaction from those who view it. My art is most certainly
        supposed to make you think, but most importantly, it should make you smile.\n\n

        - Michael Turchin\n
    </string>

    <string name="gallery_description_4">
        \n\nGallery Description for Amerikuh
    </string>

    <string name="gallery_description_5">
        \n\nDeeply influenced by the journals and writings of Anais Nin, Milisa Taylor-Hicks creates images of fragile
        beauty; she embraces the idea of metaphor to weave personal narratives. Although her images are not self-portraits
        in the traditional sense, she collaborates with trusted models who stand in not only for the photographer but also
        for all woman who struggle to forge their own rules in cultures that tend to mediate emotional excess.\n
    </string>

</resources>
